2003-03-27  Ville Palo <vi64pa@kolumbus.fi>

	* UniqueConstraintTest.cs: some minor fixes.
	
2003-03-26  Ville Palo <vi64pa@kolumbus.fi>

	* DataRowCollectionTest.cs: Tests for AutoIncrement
	
2003-03-25  Ville Palo <vi64pa@kolumbus.fi>

	* DataTableTest.cs: Added test for PrimaryKey-property
	
2003-03-16  Ville Palo <vi64pa@kolumbus.fi>

	* DataColumnCollectionTest.cs: little fix.

2003-03-16  Ville Palo <vi64pa@kolumbus.fi>

	* DataColumnCollectionTest.cs: Typos
	
2003-03-16  Ville Palo <vi64pa@kolumbus.fi>

	* DataSetTest.cs: Fixed line-ending problems
	
2003-03-06  Ville Palo <vi64pa@kolumbus.fi>

	* DataTableTest.cs: More tests for Select ()
	
2003-02-28  Ville Palo <vi64pa@kolumbus.fi>

	* DataColumnCollectionTest.cs: Added more tests.
	* DataRowCollectionTest.cs: Added more tests.
	
2003-04-02  Ville Palo <vi64pa@koti.soon.fi>

	* DataColumnTest.cs: Added tests for Expression property
	
2003-03-02  Ville Palo <vi64pa@koti.soon.fi>

	* DataTableTest.cs: More tests for Select
	
2003-31-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataTableTest.cs: Added more tests for Select (string) -method
	
2003-27-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: Added more tests
	
2003-27-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataTableTest.cs: Added test for DataTable.Select ()
	
2003-24-01  Ville Palo <vi64pa@koti.soon.fi>

	* UniqueConstraint.cs: More tests
	
2003-23-01  Ville Palo <vi64pa@koti.soon.fi>

	* ForeignKeyConstraint.cs: More tests
	
2003-22-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: More tests and little clean up.
	
2003-14-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: Added more tests
	
2003-13-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataRelationTest.cs: Test class for DataRelation
	
2002-12-26  Ville Palo <vi64pa@koti.soon.fi>

	* own_schema.xsd: XmlSchema for testing ReadXmlSchema() -method
	* DataSetTest.cs: Added more Xml-tests.	
	
2002-12-17  Ville Palo <vi64pa@koti.soon.fi>

	* region.xml: 