@@ -1,3 +1,7 @@
+2003-04-05  Ville Palo <vi64pa@kolumbus.fi>
+
+	* DataTableTest.cs: little fix.
+	
 2003-03-27  Ville Palo <vi64pa@kolumbus.fi>
 
 	* UniqueConstraintTest.cs: some minor fixes.
